--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "一个电影预告片网站，\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b\u001b[C\u001b\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C基于koa2数据爬取于豆瓣，带有一个简单的编辑后台。",
   "main": "./server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/dida-1894/movie/issues"
   },
-  "homepage": "https://github.com/dida-1894/movie#readme"
+  "homepage": "https://github.com/dida-1894/movie#readme",
+  "dependencies": {
+    "koa": "^2.6.2",
+    "koa-views": "^6.1.4",
+    "pug": "^2.0.3"
+  }
 }
