--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/dida-1894/movie#readme",
   "dependencies": {
     "ali-oss": "^6.0.1",
+    "bcrypt": "^3.0.2",
     "koa": "^2.6.2",
     "koa-views": "^6.1.4",
     "mongoose": "^5.3.14",
