--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ali-oss": "^6.0.1",
     "bcrypt": "^3.0.2",
+    "glob": "^7.1.3",
     "koa": "^2.6.2",
     "koa-views": "^6.1.4",
     "mongoose": "^5.3.14",
